# CD_DM

./: LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: pypi.yml
Directory_Manager/: fm.py  path_manager.py  ps_file_dialog.py  tk_file_dialog.py  zipper.py
cd_directory_manager/: directory_manager.py  file_manager.py  pqt_file_dialog.py  tk_file_dialog.py
